--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
 </head>
-<body id="bg-break-1">
+<body id="bg-1">
     <h1>Lo-fi Pomodoro Timer</h1>
+    <p id="countdown">25:00</p>
+    <p>1/4</p>
+    <button class="button" id="start-btn" onClick="startTimer()">start</button>
 
     <p class="yomogi-regular" id="madeBy">made with 
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart" viewBox="0 0 16 16">
