--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <body id="bg-1">
     <h1>Lo-fi Pomodoro Timer</h1>
     <p id="countdown">25:00</p>
-    <p>1/4</p>
+    <p id="quadrantEl">1/4</p>
     <button class="button" id="start-btn" onClick="startTimer()">start</button>
+    <button class="button" onClick="skip()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-skip-end" viewBox="0 0 16 16">
+        <path d="M12.5 4a.5.5 0 0 0-1 0v3.248L5.233 3.612C4.713 3.31 4 3.655 4 4.308v7.384c0 .653.713.998 1.233.696L11.5 8.752V12a.5.5 0 0 0 1 0zM5 4.633 10.804 8 5 11.367z"/>
+        </svg>
+    </button>
 
     <p class="yomogi-regular" id="madeBy">made with 
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart" viewBox="0 0 16 16">
