fixed buggy behaviour

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,13 @@
 </head>
 <body id="bg-1">
     <h1>Lo-fi Pomodoro Timer</h1>
-    <p id="countdown">25:00</p>
+    <p id="timer">25:00</p>
     <p id="quadrantEl">1/4</p>
-    <button class="button" id="start-btn" onClick="startTimer()">start</button>
+    <button class="button" id="start-btn" onClick="initialStart()">start</button>
     <button class="button" onClick="skip()">
         <i class="bi bi-skip-end"></i>
     </button>
+    <p id="message"></p>
 
     <p class="yomogi-regular" id="madeBy">made with 
         <i class="bi bi-suit-heart"></i>
